<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textLocation"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/buttonGPS"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:onClick="setGPS"
                android:text="@string/textYes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textSMSNotifications"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textSMSNotifications"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ToggleButton
                android:id="@+id/toggleSMS"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="ToggleButton"
                android:textOn="ON"
                android:textOff="OFF"
                android:onClick="onClick"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewHello"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:text="@string/gps_msg" />

            <ScrollView
                android:id="@+id/scroller"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewHello"
                android:layout_weight="0.65">

                <EditText
                    android:id="@+id/editTextPosicoes"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:focusable="false"
                    android:gravity="top|left"
                    android:inputType="none"
                    android:textSize="10sp" />

            </ScrollView>

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/textBack" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
