<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Switch
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:text="@string/textLamp1"
                android:id="@+id/switch1"
                android:checked="false"
                android:layout_gravity="center_horizontal" />

            <Switch
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:text="@string/textAlarm1"
                android:id="@+id/switch2"
                android:layout_gravity="center_horizontal"
                android:checked="false" />

            <Button
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/textSettings"
                android:id="@+id/buttonSettings"
                android:layout_gravity="center_horizontal"
                android:layout_margin="25dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="200dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Luminosity: 96%"
                android:id="@+id/textLum"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Harmful gases: 13%"
                android:id="@+id/textGas"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
